change design on the comments customer

--- a/app/views/home/epdm.html.erb
+++ b/app/views/home/epdm.html.erb
@@ -3,7 +3,8 @@
 <p>Монтаж ЭПДМ мембраны может быть произведено <strong>балластным способом</strong>. </p>
 <p>Это означает, что мембрана не прикрепляется, а просто засыпается щебнем, галькой или закладывается тротуарной плиткой, бетонными блоками. </p>
 <p>Другой способ монтажа ЭПДМ-мембран — <strong>сварка при помощи вулканизатора</strong>. Но в основном их крепят с помощью двусторонней клейкой ленты. Такой вариант позволяет быстро провести монтаж ЭПДМ мембраны, но механическая прочность швов не высока. Технические характеристики мембран таковы, что их можно укладывать поверх старого рулонного кровельного материала. Поэтому их можно использовать для проведения ремонтных работ. Но прежде чем производить монтаж ЭПДМ мембраны, нужно убедиться в том, что старое кровельное покрытие сухое. В противном случае его нужно сначала высушить, а уже затем монтировать мембрану.</p>
-<p><img src="/assets/epdm1.bmp" width="500" height="300" alt="Мембранная кровля"></p>
+
+<p><img src="/assets/epdm1.bmp" width="550" height="350" alt="Мембранная кровля"></p>
 <p>Срок эксплуатации ЭПДМ-мембран составляет около 40 лет без признаков старения. Благодаря  рулонам шириной от 3 до 12 м и длиной до 60 м, и технологии укладки ЭПДМ-мембраны можно получить минимум сварных швов. Толщина данного вида мембран составляет в среднем всего 1,14 мм.</p>
 
   <table border="2">
@@ -45,24 +46,25 @@
  
   </table>
 
-
+<a name="epdm_Carlisle"></a>
 <h2>Carlisle</h2>
 <p>Carlisle – компания является крупнейшим мировым производителем кровельных покрытий. Инновации компании позволили ей занять лидирующие позиции на рынке.  Штаб квартира компании находится в США. На рынок СНГ компания пришла в начале 90-х годов. За эти годы было реализовано много проектов с использованием мембраны Carlisle. Материал отлично себя зарекомендовал и прошел проверку временем в различных климатических зонах. Компания выпускает следующие виды ЭПДМ мембран:</p>
 
  <ul>
      <li><strong>Sure-Seal</strong> неармированная и армированная – однослойная кровельная мембрана, которую применяют уже 50 лет. Из всех существующих ЭПДМ мембран является самой долговечной и качественной. Используется в разных климатических зонах. Отличается от других ЭПДМ мембран тем, что склеивание происходит холодным способом при помощи клея, герметика, мастики самоклеющейся ленты. </li>
    </ul> 
-
+<a name="epdm_Firestone"></a>
 <h2>Firestone </h2>
    <p>Компания Firestone мировой лидер в производстве кровельных систем. Девиз компании – Никто не сделает кровлю лучше – подтверждает непререкаемое качество продукции и уровень профессионализма. Еще одним несомненным плюсом продукции Firestone является ее экологическая чистота. Продукция соответствует всем стандартам качества и имеет все необходимые сертификаты. Компания выпускает следующие виды ЭПДМ мембран:</p>
     <ul>
      <li><strong>Firestone RubberGard</strong> – экологически чистая мембрана, с минимальным воздействием на окружающую среду, не содержит токсичных веществ. Эта ЭПДМ мембрана очень прочная, обладает отличной сопротивляемостью, срок службы составляет почти 50 лет. Крыши с таким покрытием можно комбинировать с солнечными батареями. </li>
    </ul> 
-
+<a name="epdm_elastokrov"></a>
 <h2>Эластокров  </h2>
 <p><strong>Камско-Волжское акционерное общество резинотехники «КВАРТ»</strong> на протяжении более 70 лет является одним из крупнейших предприятий резинотехнической отрасли в России. В настоящее время ЗАО «КВАРТ» производит более 7000 наименований продукции, среди которых есть и ЭПДМ мембраны Эластокров. </p>
 
 <p><strong>Эластокров</strong> – это современный полимерный кровельный материал, состоящий из этиленпропиленового каучука, предназначенный для устройства новых и ремонта старых кровель.   Является аналогом ЭПДМ мембран американских фирм Firestone и Carlisle. Материал обладает отличными механическими и физическими свойствами, благодаря чему получил достаточно широкое распространение. Материал долговечный, абсолютно водонепроницаем, выдерживает значительные колебания температуры. Эластокров прост в монтаже и укладывается в один слой. </p>
+	<div id="mainContent">
 <!-- <p></p>
 
 <p><img src="/assets/second4.jpg" width="500" height="300" alt="Мембранная кровля"></p>
