--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 		<h1>Мембранная кровля</h1>
 		<p>Если раньше при выборе покрытия для плоской кровли предпочтение отдавалось битумным рулонным материалам, то сейчас все большую популярность приобретают мембранные кровельные материалы. Наплавляемые битумные материалы постепенно утрачивают свои позиции на рынке плоских кровель. И это вполне логично, так как <strong>кровельные мембраны</strong> - это материал нового поколения, который обладает рядом весомых преимуществ. </p>
 		<p>Наша компания «КитоПриус» имеет большой опыт в монтаже мембранных кровель. Работа с таким современным материалом имеет много нюансов, знать которые может только специалист. Выбирая нас, вы можете не беспокоить о качестве и сроках. За 15-летнюю историю развития нашей фирмы мы имеем множество наград, благодарственных писем от самых требовательных клиентов. Наши специалисты имеют опыт работы в ближнем зарубежье. Мы знаем о мембранной кровле все!	</p>
-		<p><img src="/assets/title1.jpg" width="500" height="181" alt="Мембранная кровля"></p>
+		<p><img src="/assets/title1.jpg" width="500" height="181" align="middle" alt="Мембранная кровля"></p>
 
 
 		<p>
@@ -22,7 +22,7 @@
    </ul>
 		</p>
 
-	<p><img src="/assets/title2.jpg" width="500" height="350" alt="Мембранная кровля"></p>
+	<p><img src="/assets/title2.jpg" width="760" height="500" alt="Мембранная кровля"></p>
 	
 	<p>В настоящее время европейские и российские производители предлагают три вида мембран, которые отличаются своим составом, способом укладки и цветовой гаммой.</p>
    <ul>
