--- a/app/views/home/pvh.html.erb
+++ b/app/views/home/pvh.html.erb
@@ -2,8 +2,9 @@
 <!-- 	<div id="mainContent"> -->
 		<h1>ПВХ-мембраны</h1>
 		<p>ПВХ мембраны состоят из поливинилхлорида с большим количеством пластификаторов. Пластификаторы придают ПВХ мембране эластичность. В качестве армирующего слоя выступает полиэфирная сетка. </p>
-	<p><img src="/assets/pvh1.bmp" width="500" height="350" alt="Мембранная кровля"></p>
- 
+
+	<p><img src="/assets/pvh1.bmp" width="550" height="350" alt="Мембранная кровля"></p>
+
  		<h2>Преимущества</h2>
  		<p>ПВХ мембрана устойчивость к ультрафиолетовому излучению.
  Имеет высокую устойчивость к возгоранию и сопротивлению пламени; имеет богатую цветовую гамму– до 9 видов цвета. </p>
@@ -18,7 +19,7 @@
 		<h2>Монтаж </h2>
 		<p>Крепится такая ПВХ мембрана с помощью тех же способов, что и ТПО-мембраны. Если выбран механический способ, то по такой ПВХ мембране ходить нельзя. Поэтому на такой кровле должны быть сделаны специальные мостки, чтобы можно было беспрепятственно осматривать и ремонтировать крышу при необходимости.</p>
 		<p>Обычно ПВХ-мембраны выпускаются в рулонах шириной от 1,5 м, имеют толщину от 1,2-2,0 мм. Средний срок службы ПВХ мембран составляет около 25-30 лет.</p>
-		<p><img src="/assets/pvh2.bmp" width="500" height="350" alt="Мембранная кровля"></p>
+		<p><img src="/assets/pvh2.bmp" width="775" height="500" alt="Мембранная кровля"></p>
   <table border="2">
 <!--    <caption>Таблица размеров обуви</caption> -->
    <tr>
@@ -29,6 +30,7 @@
    </tr>
 
    <tr>
+
    	<td>ТехноНиколь</td>
    	<td>Россия</td>
    	<td>
@@ -40,6 +42,7 @@
 
    <tr>
    	<td>Пластфоил</td>
+   	
    	<td>Россия</td>
    	<td>
    	 <p>- Plastfoil Classic 1,2-1,5 мм толщина; 1,25 мм ширина.</p>
@@ -54,6 +57,7 @@
 
    <tr>
    	<td>Carlisle</td>
+   	
    	<td>США</td>
    	<td>
    	 <p>Wild Flex - 1,27 мм, 1,52 мм и 2,03 мм толщина</p>
@@ -63,6 +67,7 @@
 
    <tr>
    	<td>Bauder</td>
+   	
    	<td>Германия</td>
    	<td>
    	 <p>Termofol – 1,2 мм, 1,5 мм, 1,8 мм, 2,0 мм толщина; 1,5 м ширина; 15 м длина</p>
@@ -80,14 +85,14 @@
    </tr>
   </table>
 
-
+	<a name="pvh_tehnonikol"></a>
 	<h2>ТехноНиколь</h2 >
 	<p><strong>ТехноНиколь</strong> – это огромная компания, занимающаяся производством различных строительных материалов. Компания выпускает кровельные, теплоизоляционные, звукоизоляционные, гидроизоляционные материалы отличного качества. Все производственные линии оснащены научными лабораториями, которые осуществляют непрерывный контроль за качеством продукции. За 20 лет работы ТехноНиколь усилила свои позиции на рынке России и ближнего зарубежья. Компания имеет развитую дилерскую сеть, со своей гибкой системой скидок. Технониколь высускае следующие вида Пвх мембран:</p>
  <ul>
      <li><strong>Logicroof</strong> – ПВХ мембрана с армированием полиэстровой сеткой. Благодаря армированию материал не дает усадку и сохраняет эластичность мембраны. Применяется на кровлях с механическим креплением. ПВХ мембрана не должен иметь прямого контакта со всеми материалами, содержащими битум и растворители.</li>
      <li><strong>Ecoplast</strong> – ПВХ мембрана, при монтаже которой используется только горячий воздух. Это подойдет там, где нельзя использовать открытый огонь. Мембрана обеспечивает надежную гидроизоляцию всего одним слоем. Укладку ПВХ мембраны можно производить с большой скоростью при любых погодных условиях. </li>
  </ul>
-
+ 	<a name="pvh_plastofil"></a>
 	<h2>Пластфоил </h2>
 	<p><strong>Пластфоил</strong> – российская компания, лидер на рынке качественных строительных материалов. Все Пвх мембраны отвечают самым жестким требованиям к качеству, надежности, экологии и пожаробезопасности. Продукция Пластфоил получила европейский сертификат качества. Завод в Ленинградской области по производству кровельных и гидроизоляционных материалов Пластфоил является крупнейшим в Европе. Здесь выпускаются не только гидроизоляционные материалы для кровельных работ, но и материалы для подземных сооружений и искусственных водоемов. При заказе большой партии ПВХ мембран Plastfoil, можно выбрать по Ral любой цвет. Производитель выпускает следующие Пвх мембраны:</p>
    
@@ -100,13 +105,14 @@
      <li><strong>Plastfoil Lay</strong> – бюджетный вариант полимерной ПВХ мембраны с отличными характеристиками. Может использоваться на любых объектах. </li>
    </ul>
 
+    <a name="pvh_Carlisle"></a>
 	<h2>Carlisle</h2 >
 	<p><strong>Carlisle</strong> – компания является крупнейшим мировым производителем кровельных покрытий. Инновации компании позволили ей занять лидирующие позиции на рынке.  Штаб квартира компании находится в США. На рынок СНГ компания пришла в начале 90-х годов. За эти годы было реализовано много проектов с использованием мембраны Carlisle. Материал отлично себя зарекомендовал и прошел проверку временем в различных климатических зонах.</p> 
    <ul>
      <li><strong>Sure Flex</strong> – термопластичная армированная мембрана на основе поливинилхлорида, которая сваривается горячим воздухом. Эта ПВХ мембрана имеет высокое сопротивление к ударам и разрывам, горению и загрязнению, сохраняет свои свойства при высоких и низких температурах. Может быть произведен в любом цвете, даже в ультра-белом.</li>
    </ul>
 
-
+    <a name="pvh_Bauder"></a>
  	<h2>Bauder</h2 >
  	<p>Компания Bauder GmbH & Co открыла свое производство в 1937 году. За свою почти вековую историю компания стала успешнейшим поставщиком кровельных мембран в мире. Bauder специализируется только на выпуске кровельных мембран. Это семейная компания, во главе угла которой стоит качество продукции. Компания выпускает следующие виды Пвх мембран:</p>
 
@@ -114,7 +120,7 @@
      <li><strong>Thermofol U</strong> – армированная сеткой из полиэстера универсальная ПВХ мембрана, подходящая для любых проектов – балластной кровли, эксплуатируемой кровли, классической кровли, применима для «зеленой кровли». Мембрана устойчива к ультрафиолету, обладает высокой износостойкостью.  </li>
 
    </ul>
-
+    <a name="pvh_Sika"></a>
 	<h2>Sika </h2 >
 	<p>Компания Sika имеет штаб-квартиру в Швейцарии и является лидером строительной промышленности в Европе, имеет многолетний опыт в производстве ПВХ мембран, которые обладают отличными химическими, механическими и физическими качествами. Продукция компании проходит жесткий контроль качества и имеет все необходимые сертификаты качества. На все материалы распространяется заводская 10-летняя гарантия качества. </p>
 	<p>Sika выпускает следующие виды ПВХ мембран:</p>
@@ -122,8 +128,8 @@
      <li><strong>Sikaplan</strong> -  полимерная многослойная мембрана из высококачественного поливинилхлорида с внутренним армированием стеклохолстом.  Sikaplan имеет высокие технические, химические характеристики, обладают большой гибкостью и эластичностью, прочностью при разрыве. ПВХ мембрана использоваться на любых кровлях, в том числе и на «зеленых кровлях».</li>
    </ul>
 
-   		<p><img src="/assets/pvh3.bmp" width="500" height="350" alt="Мембранная кровля"></p>
-
+   		<p><img src="/assets/pvh3.bmp" width="775" height="500" alt="Мембранная кровля"></p>
+	<div id="mainContent">
  <!--  
 
  <ul>
