--- a/app/views/home/tpo.html.erb
+++ b/app/views/home/tpo.html.erb
@@ -14,7 +14,7 @@
 
      <li>Повышенная прочность материала дает возможность накрывать им сложные конфигурации крыш домов и других зданий.  Все материалы, которые представлены на белорусском рынке – зарубежного производства.</li> 
    </ul>
-	<p><img src="/assets/second2.jpg" width="500" height="300" alt="Мембранная кровля"></p>
+	<p><img src="/assets/tpo2.bmp" width="780" height="500" alt="Мембранная кровля"></p>
 <h2>Технология укладки таких ТПО мембран предусматривает 3 варианта:</h2>
 <ul>
 	<li>механическое закрепление при помощи саморезов к кровле. Саморезы должны обязательно крепиться через шайбу, места креплений завариваются заплатками. ТПО мембрана настилается с нахлестом не менее 1,2 см. </li>
@@ -81,7 +81,7 @@
    </tr>
 
   </table>
-
+<a name="tpo_tehninikol"></a>
 <h2>ТехноНиколь</h2>
 <p>ТехноНиколь – это огромная компания, занимающаяся производством различных строительных материалов. Компания выпускает кровельные, теплоизоляционные, звукоизоляционные, гидроизоляционные материалы отличного качества. Все производственные линии оснащены научными лабораториями, которые осуществляют непрерывный контроль за качеством продукции. За 20 лет работы ТехноНиколь усилила свои позиции на рынке России и ближнего зарубежья. Компания имеет развитую дилерскую сеть, со своей гибкой системой скидок. </p>
 <p>Компания выпускает следующие виды ТПО мембран:</p>
@@ -90,7 +90,7 @@
 
    </ul> 
 
-
+<a name="tpo_Carlisle"></a>
 <h2>Carlisle</h2>
 
 <p>Carlisle – компания является крупнейшим мировым производителем кровельных покрытий. Инновации компании позволили ей занять лидирующие позиции на рынке. ТПО мембрана Carlisle по техническим характеристикам считается лучшей в мире.  Штаб квартира компании находится в США. На рынок СНГ компания пришла в начале 90-х годов. За эти годы было реализовано много проектов с использованием ТПО мембраны Carlisle. Материал отлично себя зарекомендовал и прошел проверку временем в различных климатических зонах.</p>
@@ -98,7 +98,7 @@
  <ul>
      <li>компания выпускает ТПО мембрану Sure-Weld. Эта мембрана состоит из 3 слоев: 1-й слой полимерный, 2-й – прочная армирующая сетка и 3-й слой – самый верхний, очень плотный, состоит из смеси термопластичных полиолефинов. Мембрана Sure-Weld имеет лучшие показатели по гладкости, светоотражению и толщине. У мембраны широкий выбор цветов, можно выбрать из белого, бежевого, серого, или выбрать цвет из палитры ТПО мембран.</li>
    </ul>
-
+<a name="tpo_Bauder"></a>
 <h2>Bauder</h2>
 <p>Компания Bauder GmbH & Co открыла свое производство в 1937 году. За свою почти вековую историю компания стала успешнейшим поставщиком кровельных мембран в мире. Bauder специализируется только на выпуске кровельных мембран. Это семейная компания, во главе угла которой стоит качество продукции. ТПО мембраны Bauder очень экологичны, они не содержат хлора, тяжелых металлов и растворителей. Их можно использовать для абсолютно любых видов плоских кровель.  Компания выпускает следующие виды ТПО мембран:</p>
 
@@ -107,7 +107,7 @@
      <li><strong>Termofin</strong> – состоит из термопластичного полиолефина и армирующей сердцевины из стекловолокна. Эта ТПО мембрана очень экономична, так как может укладываться в один слой. На ней не появляются «пузыри» из-за высокой паропроницаемости. </li>
 
    </ul>
-
+<a name="tpo_Sika"></a>
 <h2>Sika </h2>
 <p>Компания Sika имеет штаб-квартиру в Швейцарии и является лидером строительной промышленности в Европе, имеет многолетний опыт в производстве ТПО мембран, которые обладают отличными химическими, механическими и физическими качествами. Продукция компании проходит жесткий контроль качества и имеет все необходимые сертификаты качества. На все материалы распространяется заводская 10-летняя гарантия качества. </p>
 <p>Sika выпускает следующие виды ТПО мембран:</p>
@@ -115,13 +115,14 @@
      <li><strong>Sarnafil TG</strong> – многослойная ТПО мембрана, состоящая из гибкого полиолефина со стабилизатором, и добавочного гибкого слоя из стекловолокна. Мембрана устойчива к излучению, и может использоваться в любых климатических условиях. Имеет стойкость к ударам, стабильный размер, отлично сваривается и подлежит вторичной переработке</li>
    </ul> 
 
+<a name="tpo_Firestone"></a>
 <h2>Firestone </h2>
 <p>Компания Firestone мировой лидер в производстве кровельных систем. Девиз компании – Никто не сделает кровлю лучше – подтверждает непререкаемое качество продукции и уровень профессионализма. Еще одним несомненным плюсом продукции Firestone является ее экологическая чистота. Продукция соответствует всем стандартам качества и имеет все необходимые сертификаты. Компания выпускает следующие виды ТПО мембран:</p>
  <ul>
      <li><strong>UltraPly</strong>  - гибкая термопластичная полиолефиновая мембрана из этиленпропиленового каучука и полипропилена, которая армирована полиэстровым волокном. Эта Тпо мембрана имеет великолепные физические, химические и механические свойства.  Производится в виде гибкого листа светлого цвета. ТПО мембраны этого производителя устойчивы к ультрафиолетовому излучению, имеют отличную прочность стыков и устойчивы к различным атмосферным воздействиям.</li>
    </ul> 
-   	<p><img src="/assets/tpo3.bmp" width="500" height="300" alt="Мембранная кровля"></p>
-
+   	<p><img src="/assets/tpo3.bmp" width="780" height="500" alt="Мембранная кровля"></p>
+	<div id="mainContent">
 <!-- <p></p>
 
 <p><img src="/assets/second4.jpg" width="500" height="300" alt="Мембранная кровля"></p>
