--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,32 +37,32 @@
 	<div id="sidebar1">
 		<h3><a href="pvh">ПВХ мембраны:</a></h3>
 		<div class="title_back">	
-			<ul>
-				<li class="sub">ТехноНиколь</li>
-				<li class="sub">Пластфоил</li>
-				<li class="sub">Carlisle</li>
-				<li class="sub">Bauder</li>
-				<li class="sub">Sica</li>
+			<ul>				
+				<li class="sub"><a href="pvh#pvh_tehnonikol">ТехноНиколь</a></li>
+				<li class="sub"><a href="pvh#pvh_plastofil">Пластфоил</a></li>
+				<li class="sub"><a href="pvh#pvh_Carlisle">Carlisle</a></li>
+				<li class="sub"><a href="pvh#pvh_Bauder">Bauder</a></li>
+				<li class="sub"><a href="pvh#pvh_Sika">Sika</a></li>
 			</ul>
 		</div>	
 		<h3><a href="tpo">ТПО мембраны:</a></h3>
 		<div class="title_back">	
 			<ul>
 
-				<li class="sub">ТехноНиколь</li>
-				<li class="sub">Carlisle</li>
-				<li class="sub">Bauder</li>
-				<li class="sub">Sica</li>
-				<li class="sub">Restone</li>
+				<li class="sub"><a href="tpo#tpo_tehnonikol">ТехноНиколь</a></li>
+				<li class="sub"><a href="tpo#tpo_Carlisle">Carlisle</a></li>
+				<li class="sub"><a href="tpo#tpo_Bauder">Bauder</a></li>
+				<li class="sub"><a href="tpo#tpo_Sika">Sika</a></li>
+				<li class="sub"><a href="tpo#tpo_Firestone">Firestone</a></li>
 			</ul>
 		</div>
 		<h3><a href="epdm">ЭПДМ мембраны:</a></h3>
 		<div class="title_back">	
 			<ul>
 
-				<li class="sub">Carlite</li>
-				<li class="sub">Firestone</li>
-				<li class="sub">Эластокров</li>
+				<li class="sub"><a href="epdm#epdm_Carlisle">Carlisle</a></li>
+				<li class="sub"><a href="epdm#epdm_Firestone">Firestone</a></li>
+				<li class="sub"><a href="epdm#epdm_elastokrov">Эластокров</a></li>
 			</ul>
 		</div>
 	</div>
