add keyword and description

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,15 +3,13 @@
 <head>
   <title>Мембранная кровля</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="keywords" content="">
-  <meta name="description" content="">
+  <meta name="keywords" content="Мембранная кровля, ПВХ мембраны, ТехноНиколь, Пластфоил, Carlisle, Bauder, Sika, ТПО мембраны, Firestone, Эластокров, ЭПДМ мембраны, Мембранная кровля в Беларуси">
+  <meta name="description" content="Мембранная кровля в Беларуси">
   <link href="/assets/style.css" rel="stylesheet" type="text/css">
 <!--   <link href="/assets/style.css" rel="stylesheet" type="text/css"> -->
   <link href="/assets/aaa.css" rel="stylesheet" type="text/css">
 
 </head>
-
-
 
 <body>
 <!-- #container -->
@@ -75,8 +73,11 @@
 <!-- #footer -->
 <div id="footer">
 	<div class="fcenter">
-		<div class="fleft"><p>Copyright Statement</p></div><div class="fright"><p>Создать интернет-магазин с помощью <a href="http://www.opencartmaster.ru/">www.opencartmaster.ru</a></p></div><div class="fclear"></div>
-		<div class="fleft"><p>Design by <a href="http://www.flash-templates-today.com/" title="Free Flash Templates">Free Flash Templates</a></p></div><div class="fright"><p>Best <a href="http://www.templatemonster.com/">Website Templates</a> From TemplateMonster</p></div><div class="fclear"></div>
+		<div class="fleft"><p>Минск 2016</p></div>
+		<div class="fright"><p>МОНТАЖ МЕМБРАННОЙ КРОВЛИ</p></div>
+		<div class="fclear"></div>
+		<div class="fleft"><p>Design by <a href="http://intersite.by/" title="Free Flash Templates">Intersite.by</a></p></div>
+		<div class="fright"><p>+37529 8716219</div>
 	</div>
 </div>
 
