--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -10,8 +10,8 @@ a:hover {text-decoration:none;color:#627cb9}
 a:visited {color:#627cb9}
 #container {width:780px;background:#fff;margin:0 auto;border-left:8px solid #fff;border-right:8px solid #fff;text-align:left;} 
 #header {background:#ddd url(/assets/headerBackground.jpg) ;width:780px;height:286px;padding:0;} 
-#header h1 {margin:0 15px;padding:20px 0 0 0;color:#fff; font-size: 230%;}
-#header h4 {color:#fff;margin:0 15px;padding:0}
+#header h1 {margin:0 15px;padding:20px 0 0 0;color:#fff; font-size: 240%;}
+#header h4 {color:#fff;margin:0 15px;padding:0; font-size: 125%;}
 #mainContent {margin:0 230px 0 10px;} 
 .date {text-align:right;color:#ED7D96;font-size:11px}
 .date a {color:#ED7D96}
