add google and yandex. verification

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Мембранная кровля</title>
+  <meta name="google-site-verification" content="ByNYShZiIi6sYpTox_FgDAxmnMQOby1IfM_CMBTIyTo" />
+  <meta name="yandex-verification" content="738c29ffe6e7a152" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="keywords" content="Мембранная кровля, ПВХ мембраны, ТехноНиколь, Пластфоил, Carlisle, Bauder, Sika, ТПО мембраны, Firestone, Эластокров, ЭПДМ мембраны, Мембранная кровля в Беларуси">
   <meta name="description" content="Мембранная кровля в Беларуси">
